    an Apache 404 handler, to give the behaviour of various other wiki
    engines where visiting a nonexistent page provides you with a link
    to create it. (smcv)
  * Factor out redundant code into goto plugin. (smcv)
  * Work around XML::Atom strangeness that results in double-encoded posts.
    (smcv) 
  * Updated German translation (Kai Wasserbäch). Closes: #514251

 -- Joey Hess <joeyh@debian.org>  Sat, 31 Jan 2009 19:04:45 -0500

ikiwiki (3.03) unstable; urgency=low

  * Avoid feeding decoded unicode to Term::ReadLine. Closes: 512169
  * blogspam: Log spam info on failure in debug mode.
  * Remove nonstandard css. Closes: #512378
  * blogspam: Fix use of blogspam_options and blogspam_server config settings.
  * comments: If comment content checks fail, store the comment
    (in .ikiwiki/comments_pending) for moderator review.
  * comments: Add a moderation web interface, which admins can
    access via their Preferences page.
  * git: Fix malformed utf8 received from git.
  * meta: New "updated" metadata specifies a fake modification time for a
    page, to be output into RSS and Atom feeds. (smcv)
  * underlay: New plugin, allows pulling in additional files not
    in version control. (smcv) 

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Jan 2009 14:36:58 -0500

ikiwiki (3.02) unstable; urgency=low

  * blogspam: New plugin, adding spam filtering for page editing / comment
    posting using the BlogSpam.net API.
  * Add auto-blog.setup, which will set up an ikiwiki instance tuned for use
    in blogging.
  * checkcontent: New hook, can be used to implement arbitrary content
    filters, including spam filters.
  * table: Fix misparsed links in external files.
  * table: Find links in external files in scan pass.
  * rename: Show full names of affected pages.
  * comments: Fix cache avoidance hack.
  * repolist: New plugin to support the rel=vcs-* microformat.
  * goodstuff: Include repolist by default. (But it does nothing until