@@ -135,7 +135,8 @@ sub main () {
 
 		if (@{$config{wrappers}} && 
 		    ! $config{render} && ! $config{dumpsetup} &&
-		    (! $config{refresh} || $config{genwrappers})) {
+		    ((! $config{refresh} && ! $config{post_commit})
+		     || $config{genwrappers})) {
 			debug(gettext("generating wrappers.."));
 			require IkiWiki::Wrapper;
 			my %origconfig=(%config);
@@ -157,7 +158,8 @@ sub main () {
 		}
 		
 		# setup implies a wiki rebuild by default
-		if (! $config{refresh} && ! $config{render}) {
+		if (! $config{refresh} && ! $config{render} &&
+		    ! $config{post_commit}) {
 			$config{rebuild}=1;
 		}
 	}
