@@ -8,6 +8,7 @@ ikiwiki (3.04) UNRELEASED; urgency=low
   * Work around XML::Atom strangeness that results in double-encoded posts.
     (smcv) 
   * Updated German translation (Kai Wasserbäch). Closes: #514251
+  * Fix unusual --setup --post-commit command line option combo.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 31 Jan 2009 19:04:45 -0500
 
